export const snapshot = {};

snapshot[`snapshot: 1 — healthy state (all green, 4 collections) 1`] = `
| image=PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxNCAxNCIgd2lkdGg9IjE0IiBoZWlnaHQ9IjE0Ij48Y2lyY2xlIGN4PSI2LjIiIGN5PSI2LjIiIHI9IjQuMiIgZmlsbD0iY3VycmVudENvbG9yIi8+PGNpcmNsZSBjeD0iNi4yIiBjeT0iNi4yIiByPSIxLjYiIGZpbGw9IndoaXRlIi8+PGxpbmUgeDE9IjguNiIgeTE9IjguNiIgeDI9IjExLjIiIHkyPSIxMS4yIiBzdHJva2U9ImN1cnJlbnRDb2xvciIgc3Ryb2tlLXdpZHRoPSIxLjYiIHN0cm9rZS1saW5lY2FwPSJyb3VuZCIvPjwvc3ZnPg== templateImage=true color=#2fa84f tooltip="All clear"
---
Status | size=10 color=#8a8a8e shell=
● Daemon running                       6h 4m | color=#2fa84f size=12 shell= length=44 trim=false
● All collections healthy | color=#2fa84f shell=
    Last update               12 minutes ago | color=#8a8a8e shell= length=44 trim=false
---
Collections (4) | size=10 color=#8a8a8e shell=
● gVault                       2,057 · 18h ▸ | color=#2fa84f length=44 trim=false
  gVault | size=10 color=#8a8a8e shell=
  2,057 docs · qmd://gVault/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated            18 hours ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="gVault" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="gVault" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="gVault" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/notes/gVault" terminal=false
  📓 Open in Obsidian | bash="open" param1="obsidian://open?vault=gVault" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'gVault' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="gVault" terminal=false refresh=true
● jobinator9000                   129 · 1h ▸ | color=#2fa84f length=44 trim=false
  jobinator9000 | size=10 color=#8a8a8e shell=
  129 docs · qmd://jobinator9000/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated              1 hour ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="jobinator9000" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="jobinator9000" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="jobinator9000" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/projects/jobinator9000" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'jobinator9000' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="jobinator9000" terminal=false refresh=true
● obsidian-reference           1,596 · 52m ▸ | color=#2fa84f length=44 trim=false
  obsidian-reference | size=10 color=#8a8a8e shell=
  1,596 docs · qmd://obsidian-reference/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated          52 minutes ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/notes/obsidian-reference" terminal=false
  📓 Open in Obsidian | bash="open" param1="obsidian://open?vault=obsidian-reference" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'obsidian-reference' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
● Rackula                        391 · 12m ▸ | color=#2fa84f length=44 trim=false
  Rackula | size=10 color=#8a8a8e shell=
  391 docs · qmd://Rackula/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated          12 minutes ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="Rackula" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="Rackula" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="Rackula" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/notes/rackula" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'Rackula' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="Rackula" terminal=false refresh=true
---
Global actions | size=10 color=#8a8a8e shell=
↻ Update all collections | bash="<PLUGIN_PATH>" param1="--action" param2="update-all" terminal=false refresh=true shortcut=CmdOrCtrl+U
⚡ Embed all (new only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-all" terminal=false refresh=true shortcut=CmdOrCtrl+E
⟳ Restart MCP daemon | bash="<PLUGIN_PATH>" param1="--action" param2="restart-daemon" terminal=false refresh=true
■ Stop MCP daemon | bash="<PLUGIN_PATH>" param1="--action" param2="stop-daemon" terminal=false refresh=true
🧹 Cleanup orphaned data… | bash="<PLUGIN_PATH>" param1="--action" param2="cleanup" terminal=false refresh=true
---
⧉ Copy MCP endpoint URL | bash="bash" param1="-c" param2="echo -n 'http://localhost:8181' | pbcopy" terminal=false
›_ Show qmd status in Terminal | bash="qmd" param1="status" terminal=true
---
⚙ Preferences… | bash="open" param1="-t" param2=\$HOME/.config/swiftbar-qmd/config.yml terminal=false shortcut=CmdOrCtrl+Comma
ⓘ About swiftbar-qmd | bash="open" param1="https://github.com/ggfevans/swiftbar-qmd" terminal=false

`;

snapshot[`snapshot: 2 — drifting state (Rackula past 24h freshness) 1`] = `
| image=PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxNCAxNCIgd2lkdGg9IjE0IiBoZWlnaHQ9IjE0Ij48Y2lyY2xlIGN4PSI2LjIiIGN5PSI2LjIiIHI9IjQuMiIgZmlsbD0iY3VycmVudENvbG9yIi8+PGNpcmNsZSBjeD0iNi4yIiBjeT0iNi4yIiByPSIxLjYiIGZpbGw9IndoaXRlIi8+PGxpbmUgeDE9IjguNiIgeTE9IjguNiIgeDI9IjExLjIiIHkyPSIxMS4yIiBzdHJva2U9ImN1cnJlbnRDb2xvciIgc3Ryb2tlLXdpZHRoPSIxLjYiIHN0cm9rZS1saW5lY2FwPSJyb3VuZCIvPjwvc3ZnPg== templateImage=true color=#ec9b2c tooltip="Rackula last updated 1d 1h ago (>24h)"
---
Status | size=10 color=#8a8a8e shell=
● Daemon running                       6h 4m | color=#2fa84f size=12 shell= length=44 trim=false
○ 1 collection drifting | color=#ec9b2c shell=
    Last update               52 minutes ago | color=#8a8a8e shell= length=44 trim=false
---
Collections (4) | size=10 color=#8a8a8e shell=
● gVault                       2,057 · 18h ▸ | color=#2fa84f length=44 trim=false
  gVault | size=10 color=#8a8a8e shell=
  2,057 docs · qmd://gVault/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated            18 hours ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="gVault" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="gVault" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="gVault" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/notes/gVault" terminal=false
  📓 Open in Obsidian | bash="open" param1="obsidian://open?vault=gVault" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'gVault' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="gVault" terminal=false refresh=true
● jobinator9000                   129 · 1h ▸ | color=#2fa84f length=44 trim=false
  jobinator9000 | size=10 color=#8a8a8e shell=
  129 docs · qmd://jobinator9000/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated              1 hour ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="jobinator9000" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="jobinator9000" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="jobinator9000" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/projects/jobinator9000" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'jobinator9000' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="jobinator9000" terminal=false refresh=true
● obsidian-reference           1,596 · 52m ▸ | color=#2fa84f length=44 trim=false
  obsidian-reference | size=10 color=#8a8a8e shell=
  1,596 docs · qmd://obsidian-reference/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated          52 minutes ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/notes/obsidian-reference" terminal=false
  📓 Open in Obsidian | bash="open" param1="obsidian://open?vault=obsidian-reference" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'obsidian-reference' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
● Rackula                      391 · 1d 1h ▸ | color=#ec9b2c length=44 trim=false
  Rackula | size=10 color=#8a8a8e shell=
  391 docs · qmd://Rackula/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated             yesterday ⚠ | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="Rackula" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="Rackula" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="Rackula" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/notes/rackula" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'Rackula' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="Rackula" terminal=false refresh=true
---
Global actions | size=10 color=#8a8a8e shell=
↻ Update all collections | bash="<PLUGIN_PATH>" param1="--action" param2="update-all" terminal=false refresh=true shortcut=CmdOrCtrl+U
⚡ Embed all (new only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-all" terminal=false refresh=true shortcut=CmdOrCtrl+E
⟳ Restart MCP daemon | bash="<PLUGIN_PATH>" param1="--action" param2="restart-daemon" terminal=false refresh=true
■ Stop MCP daemon | bash="<PLUGIN_PATH>" param1="--action" param2="stop-daemon" terminal=false refresh=true
🧹 Cleanup orphaned data… | bash="<PLUGIN_PATH>" param1="--action" param2="cleanup" terminal=false refresh=true
---
⧉ Copy MCP endpoint URL | bash="bash" param1="-c" param2="echo -n 'http://localhost:8181' | pbcopy" terminal=false
›_ Show qmd status in Terminal | bash="qmd" param1="status" terminal=true
---
⚙ Preferences… | bash="open" param1="-t" param2=\$HOME/.config/swiftbar-qmd/config.yml terminal=false shortcut=CmdOrCtrl+Comma
ⓘ About swiftbar-qmd | bash="open" param1="https://github.com/ggfevans/swiftbar-qmd" terminal=false

`;

snapshot[`snapshot: 3 — red state (daemon stopped) 1`] = `
| image=PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxNCAxNCIgd2lkdGg9IjE0IiBoZWlnaHQ9IjE0Ij48Y2lyY2xlIGN4PSI2LjIiIGN5PSI2LjIiIHI9IjQuMiIgZmlsbD0iY3VycmVudENvbG9yIi8+PGNpcmNsZSBjeD0iNi4yIiBjeT0iNi4yIiByPSIxLjYiIGZpbGw9IndoaXRlIi8+PGxpbmUgeDE9IjguNiIgeTE9IjguNiIgeDI9IjExLjIiIHkyPSIxMS4yIiBzdHJva2U9ImN1cnJlbnRDb2xvciIgc3Ryb2tlLXdpZHRoPSIxLjYiIHN0cm9rZS1saW5lY2FwPSJyb3VuZCIvPjwvc3ZnPg== templateImage=true color=#d8453f tooltip="Daemon stopped"
---
Status | size=10 color=#8a8a8e shell=
● Daemon stopped | color=#d8453f size=12 shell=
● All collections healthy | color=#2fa84f shell=
    Last update               12 minutes ago | color=#8a8a8e shell= length=44 trim=false
---
Collections (4) | size=10 color=#8a8a8e shell=
● gVault                       2,057 · 18h ▸ | color=#2fa84f length=44 trim=false
  gVault | size=10 color=#8a8a8e shell=
  2,057 docs · qmd://gVault/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated            18 hours ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="gVault" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="gVault" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="gVault" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/notes/gVault" terminal=false
  📓 Open in Obsidian | bash="open" param1="obsidian://open?vault=gVault" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'gVault' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="gVault" terminal=false refresh=true
● jobinator9000                   129 · 1h ▸ | color=#2fa84f length=44 trim=false
  jobinator9000 | size=10 color=#8a8a8e shell=
  129 docs · qmd://jobinator9000/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated              1 hour ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="jobinator9000" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="jobinator9000" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="jobinator9000" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/projects/jobinator9000" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'jobinator9000' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="jobinator9000" terminal=false refresh=true
● obsidian-reference           1,596 · 52m ▸ | color=#2fa84f length=44 trim=false
  obsidian-reference | size=10 color=#8a8a8e shell=
  1,596 docs · qmd://obsidian-reference/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated          52 minutes ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/notes/obsidian-reference" terminal=false
  📓 Open in Obsidian | bash="open" param1="obsidian://open?vault=obsidian-reference" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'obsidian-reference' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
● Rackula                        391 · 12m ▸ | color=#2fa84f length=44 trim=false
  Rackula | size=10 color=#8a8a8e shell=
  391 docs · qmd://Rackula/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated          12 minutes ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="Rackula" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="Rackula" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="Rackula" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/notes/rackula" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'Rackula' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="Rackula" terminal=false refresh=true
---
Global actions | size=10 color=#8a8a8e shell=
↻ Update all collections | bash="<PLUGIN_PATH>" param1="--action" param2="update-all" terminal=false refresh=true shortcut=CmdOrCtrl+U
⚡ Embed all (new only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-all" terminal=false refresh=true shortcut=CmdOrCtrl+E
⟳ Restart MCP daemon | bash="<PLUGIN_PATH>" param1="--action" param2="restart-daemon" terminal=false refresh=true
▶ Start MCP daemon | bash="<PLUGIN_PATH>" param1="--action" param2="start-daemon" terminal=false refresh=true
🧹 Cleanup orphaned data… | bash="<PLUGIN_PATH>" param1="--action" param2="cleanup" terminal=false refresh=true
---
⧉ Copy MCP endpoint URL | bash="bash" param1="-c" param2="echo -n 'http://localhost:8181' | pbcopy" terminal=false
›_ Show qmd status in Terminal | bash="qmd" param1="status" terminal=true
---
⚙ Preferences… | bash="open" param1="-t" param2=\$HOME/.config/swiftbar-qmd/config.yml terminal=false shortcut=CmdOrCtrl+Comma
ⓘ About swiftbar-qmd | bash="open" param1="https://github.com/ggfevans/swiftbar-qmd" terminal=false

`;

snapshot[`snapshot: 4 — in-flight state (update-all 1m elapsed) 1`] = `
| image=PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxNCAxNCIgd2lkdGg9IjE0IiBoZWlnaHQ9IjE0Ij48Y2lyY2xlIGN4PSI2LjIiIGN5PSI2LjIiIHI9IjQuMiIgZmlsbD0iY3VycmVudENvbG9yIi8+PGNpcmNsZSBjeD0iNi4yIiBjeT0iNi4yIiByPSIxLjYiIGZpbGw9IndoaXRlIi8+PGxpbmUgeDE9IjguNiIgeTE9IjguNiIgeDI9IjExLjIiIHkyPSIxMS4yIiBzdHJva2U9ImN1cnJlbnRDb2xvciIgc3Ryb2tlLXdpZHRoPSIxLjYiIHN0cm9rZS1saW5lY2FwPSJyb3VuZCIvPjwvc3ZnPg== templateImage=true color=#ec9b2c tooltip="Update job in flight"
---
Status | size=10 color=#8a8a8e shell=
● Daemon running                       6h 4m | color=#2fa84f size=12 shell= length=44 trim=false
● All collections healthy | color=#2fa84f shell=
    Last update               12 minutes ago | color=#8a8a8e shell= length=44 trim=false
⟳ Running: Update for 1m | color=#ec9b2c size=12 shell=
---
Collections (4) | size=10 color=#8a8a8e shell=
● gVault                       2,057 · 18h ▸ | color=#2fa84f length=44 trim=false
  gVault | size=10 color=#8a8a8e shell=
  2,057 docs · qmd://gVault/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated            18 hours ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="gVault" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="gVault" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="gVault" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/notes/gVault" terminal=false
  📓 Open in Obsidian | bash="open" param1="obsidian://open?vault=gVault" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'gVault' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="gVault" terminal=false refresh=true
● jobinator9000                   129 · 1h ▸ | color=#2fa84f length=44 trim=false
  jobinator9000 | size=10 color=#8a8a8e shell=
  129 docs · qmd://jobinator9000/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated              1 hour ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="jobinator9000" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="jobinator9000" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="jobinator9000" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/projects/jobinator9000" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'jobinator9000' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="jobinator9000" terminal=false refresh=true
● obsidian-reference           1,596 · 52m ▸ | color=#2fa84f length=44 trim=false
  obsidian-reference | size=10 color=#8a8a8e shell=
  1,596 docs · qmd://obsidian-reference/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated          52 minutes ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/notes/obsidian-reference" terminal=false
  📓 Open in Obsidian | bash="open" param1="obsidian://open?vault=obsidian-reference" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'obsidian-reference' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
● Rackula                        391 · 12m ▸ | color=#2fa84f length=44 trim=false
  Rackula | size=10 color=#8a8a8e shell=
  391 docs · qmd://Rackula/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated          12 minutes ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="Rackula" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="Rackula" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="Rackula" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/notes/rackula" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'Rackula' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="Rackula" terminal=false refresh=true
---
Global actions | size=10 color=#8a8a8e shell=
Running: update… (1m) | bash="<PLUGIN_PATH>" param1="--action" param2="update-all" terminal=false refresh=true shortcut=CmdOrCtrl+U disabled=true
⚡ Embed all (new only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-all" terminal=false refresh=true shortcut=CmdOrCtrl+E
⟳ Restart MCP daemon | bash="<PLUGIN_PATH>" param1="--action" param2="restart-daemon" terminal=false refresh=true
■ Stop MCP daemon | bash="<PLUGIN_PATH>" param1="--action" param2="stop-daemon" terminal=false refresh=true
🧹 Cleanup orphaned data… | bash="<PLUGIN_PATH>" param1="--action" param2="cleanup" terminal=false refresh=true
---
⧉ Copy MCP endpoint URL | bash="bash" param1="-c" param2="echo -n 'http://localhost:8181' | pbcopy" terminal=false
›_ Show qmd status in Terminal | bash="qmd" param1="status" terminal=true
---
⚙ Preferences… | bash="open" param1="-t" param2=\$HOME/.config/swiftbar-qmd/config.yml terminal=false shortcut=CmdOrCtrl+Comma
ⓘ About swiftbar-qmd | bash="open" param1="https://github.com/ggfevans/swiftbar-qmd" terminal=false

`;

snapshot[`snapshot: 5 — first-run: no-qmd 1`] = `
| image=PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxNCAxNCIgd2lkdGg9IjE0IiBoZWlnaHQ9IjE0Ij48Y2lyY2xlIGN4PSI2LjIiIGN5PSI2LjIiIHI9IjQuMiIgZmlsbD0ibm9uZSIgc3Ryb2tlPSJjdXJyZW50Q29sb3IiIHN0cm9rZS13aWR0aD0iMS40Ii8+PGxpbmUgeDE9IjguNiIgeTE9IjguNiIgeDI9IjExLjIiIHkyPSIxMS4yIiBzdHJva2U9ImN1cnJlbnRDb2xvciIgc3Ryb2tlLXdpZHRoPSIxLjYiIHN0cm9rZS1saW5lY2FwPSJyb3VuZCIvPjwvc3ZnPg== templateImage=true tooltip="qmd not detected"
---
qmd not detected | size=10 color=#8a8a8e shell=
   Install qmd from github.com/tobi/qmd | bash="open" param1="https://github.com/tobi/qmd#installation" terminal=false
   Re-check now | bash="<PLUGIN_PATH>" param1="--action" param2="recheck" terminal=false refresh=true
---
   Preferences… | bash="open" param1="-t" param2=\$HOME/.config/swiftbar-qmd/config.yml terminal=false
   About swiftbar-qmd | bash="open" param1="https://github.com/ggfevans/swiftbar-qmd" terminal=false

`;

snapshot[`snapshot: 6 — first-run: no-collections 1`] = `
| image=PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxNCAxNCIgd2lkdGg9IjE0IiBoZWlnaHQ9IjE0Ij48Y2lyY2xlIGN4PSI2LjIiIGN5PSI2LjIiIHI9IjQuMiIgZmlsbD0ibm9uZSIgc3Ryb2tlPSJjdXJyZW50Q29sb3IiIHN0cm9rZS13aWR0aD0iMS40Ii8+PGxpbmUgeDE9IjguNiIgeTE9IjguNiIgeDI9IjExLjIiIHkyPSIxMS4yIiBzdHJva2U9ImN1cnJlbnRDb2xvciIgc3Ryb2tlLXdpZHRoPSIxLjYiIHN0cm9rZS1saW5lY2FwPSJyb3VuZCIvPjwvc3ZnPg== templateImage=true tooltip="No collections configured"
---
No collections configured | size=10 color=#8a8a8e shell=
   qmd is installed but you have no collections. | size=11 color=#6e6e72 shell=
   Open the qmd README… | bash="open" param1="https://github.com/tobi/qmd#collection-management" terminal=false
   Run 'qmd collection add' in a terminal to start. | size=11 color=#6e6e72 shell=
   Re-check now | bash="<PLUGIN_PATH>" param1="--action" param2="recheck" terminal=false refresh=true
---
   Preferences… | bash="open" param1="-t" param2=\$HOME/.config/swiftbar-qmd/config.yml terminal=false
   About swiftbar-qmd | bash="open" param1="https://github.com/ggfevans/swiftbar-qmd" terminal=false

`;

snapshot[`snapshot: 7 — first-run: empty-index 1`] = `
| image=PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxNCAxNCIgd2lkdGg9IjE0IiBoZWlnaHQ9IjE0Ij48Y2lyY2xlIGN4PSI2LjIiIGN5PSI2LjIiIHI9IjQuMiIgZmlsbD0iY3VycmVudENvbG9yIi8+PGNpcmNsZSBjeD0iNi4yIiBjeT0iNi4yIiByPSIxLjYiIGZpbGw9IndoaXRlIi8+PGxpbmUgeDE9IjguNiIgeTE9IjguNiIgeDI9IjExLjIiIHkyPSIxMS4yIiBzdHJva2U9ImN1cnJlbnRDb2xvciIgc3Ryb2tlLXdpZHRoPSIxLjYiIHN0cm9rZS1saW5lY2FwPSJyb3VuZCIvPjwvc3ZnPg== color=#ec9b2c templateImage=true tooltip="Index has no documents"
---
Index has no documents | size=10 color=#412402 shell=
   Collections are registered but nothing's been indexed yet.
---
↻ Run update | bash="<PLUGIN_PATH>" param1="--action" param2="update-all" terminal=false refresh=true
---
   Preferences… | bash="open" param1="-t" param2=\$HOME/.config/swiftbar-qmd/config.yml terminal=false
   About swiftbar-qmd | bash="open" param1="https://github.com/ggfevans/swiftbar-qmd" terminal=false

`;

snapshot[`snapshot: 8 — error state (consecutiveReadFailures: 1, prev snapshot) 1`] = `
| image=PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxNCAxNCIgd2lkdGg9IjE0IiBoZWlnaHQ9IjE0Ij48Y2lyY2xlIGN4PSI2LjIiIGN5PSI2LjIiIHI9IjQuMiIgZmlsbD0ibm9uZSIgc3Ryb2tlPSJjdXJyZW50Q29sb3IiIHN0cm9rZS13aWR0aD0iMS40Ii8+PGxpbmUgeDE9IjguNiIgeTE9IjguNiIgeDI9IjExLjIiIHkyPSIxMS4yIiBzdHJva2U9ImN1cnJlbnRDb2xvciIgc3Ryb2tlLXdpZHRoPSIxLjYiIHN0cm9rZS1saW5lY2FwPSJyb3VuZCIvPjwvc3ZnPg== templateImage=true tooltip="No collections configured"
---
⚠ Status read failed — using last poll (5 minutes ago) | size=10 color=#d8453f shell=
---
Status | size=10 color=#8a8a8e shell=
● Daemon running                       6h 4m | color=#2fa84f size=12 shell= length=44 trim=false
● All collections healthy | color=#2fa84f shell=
    Last update                            — | color=#8a8a8e shell= length=44 trim=false
---
Collections (0) | size=10 color=#8a8a8e shell=
---
Global actions | size=10 color=#8a8a8e shell=
↻ Update all collections | bash="<PLUGIN_PATH>" param1="--action" param2="update-all" terminal=false refresh=true shortcut=CmdOrCtrl+U
⚡ Embed all (new only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-all" terminal=false refresh=true shortcut=CmdOrCtrl+E
⟳ Restart MCP daemon | bash="<PLUGIN_PATH>" param1="--action" param2="restart-daemon" terminal=false refresh=true
■ Stop MCP daemon | bash="<PLUGIN_PATH>" param1="--action" param2="stop-daemon" terminal=false refresh=true
🧹 Cleanup orphaned data… | bash="<PLUGIN_PATH>" param1="--action" param2="cleanup" terminal=false refresh=true
---
⧉ Copy MCP endpoint URL | bash="bash" param1="-c" param2="echo -n 'http://localhost:8181' | pbcopy" terminal=false
›_ Show qmd status in Terminal | bash="qmd" param1="status" terminal=true
⚠ Show last error | bash="open" param1="-t" param2="<CACHE_DIR>/error.log" terminal=false
---
⚙ Preferences… | bash="open" param1="-t" param2=\$HOME/.config/swiftbar-qmd/config.yml terminal=false shortcut=CmdOrCtrl+Comma
ⓘ About swiftbar-qmd | bash="open" param1="https://github.com/ggfevans/swiftbar-qmd" terminal=false

`;

snapshot[`snapshot: 9 — config-error state (⚠ Config error header) 1`] = `
| image=PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxNCAxNCIgd2lkdGg9IjE0IiBoZWlnaHQ9IjE0Ij48Y2lyY2xlIGN4PSI2LjIiIGN5PSI2LjIiIHI9IjQuMiIgZmlsbD0iY3VycmVudENvbG9yIi8+PGNpcmNsZSBjeD0iNi4yIiBjeT0iNi4yIiByPSIxLjYiIGZpbGw9IndoaXRlIi8+PGxpbmUgeDE9IjguNiIgeTE9IjguNiIgeDI9IjExLjIiIHkyPSIxMS4yIiBzdHJva2U9ImN1cnJlbnRDb2xvciIgc3Ryb2tlLXdpZHRoPSIxLjYiIHN0cm9rZS1saW5lY2FwPSJyb3VuZCIvPjwvc3ZnPg== templateImage=true color=#2fa84f tooltip="All clear"
---
⚠ Config error — see logs | size=10 color=#d8453f shell=
---
Status | size=10 color=#8a8a8e shell=
● Daemon running                       6h 4m | color=#2fa84f size=12 shell= length=44 trim=false
● All collections healthy | color=#2fa84f shell=
    Last update               12 minutes ago | color=#8a8a8e shell= length=44 trim=false
---
Collections (4) | size=10 color=#8a8a8e shell=
● gVault                       2,057 · 18h ▸ | color=#2fa84f length=44 trim=false
  gVault | size=10 color=#8a8a8e shell=
  2,057 docs · qmd://gVault/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated            18 hours ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="gVault" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="gVault" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="gVault" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/notes/gVault" terminal=false
  📓 Open in Obsidian | bash="open" param1="obsidian://open?vault=gVault" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'gVault' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="gVault" terminal=false refresh=true
● jobinator9000                   129 · 1h ▸ | color=#2fa84f length=44 trim=false
  jobinator9000 | size=10 color=#8a8a8e shell=
  129 docs · qmd://jobinator9000/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated              1 hour ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="jobinator9000" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="jobinator9000" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="jobinator9000" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/projects/jobinator9000" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'jobinator9000' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="jobinator9000" terminal=false refresh=true
● obsidian-reference           1,596 · 52m ▸ | color=#2fa84f length=44 trim=false
  obsidian-reference | size=10 color=#8a8a8e shell=
  1,596 docs · qmd://obsidian-reference/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated          52 minutes ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/notes/obsidian-reference" terminal=false
  📓 Open in Obsidian | bash="open" param1="obsidian://open?vault=obsidian-reference" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'obsidian-reference' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
● Rackula                        391 · 12m ▸ | color=#2fa84f length=44 trim=false
  Rackula | size=10 color=#8a8a8e shell=
  391 docs · qmd://Rackula/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated          12 minutes ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="Rackula" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="Rackula" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="Rackula" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/notes/rackula" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'Rackula' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="Rackula" terminal=false refresh=true
---
Global actions | size=10 color=#8a8a8e shell=
↻ Update all collections | bash="<PLUGIN_PATH>" param1="--action" param2="update-all" terminal=false refresh=true shortcut=CmdOrCtrl+U
⚡ Embed all (new only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-all" terminal=false refresh=true shortcut=CmdOrCtrl+E
⟳ Restart MCP daemon | bash="<PLUGIN_PATH>" param1="--action" param2="restart-daemon" terminal=false refresh=true
■ Stop MCP daemon | bash="<PLUGIN_PATH>" param1="--action" param2="stop-daemon" terminal=false refresh=true
🧹 Cleanup orphaned data… | bash="<PLUGIN_PATH>" param1="--action" param2="cleanup" terminal=false refresh=true
---
⧉ Copy MCP endpoint URL | bash="bash" param1="-c" param2="echo -n 'http://localhost:8181' | pbcopy" terminal=false
›_ Show qmd status in Terminal | bash="qmd" param1="status" terminal=true
⚠ Show last error | bash="open" param1="-t" param2="<CACHE_DIR>/error.log" terminal=false
---
⚙ Preferences… | bash="open" param1="-t" param2=\$HOME/.config/swiftbar-qmd/config.yml terminal=false shortcut=CmdOrCtrl+Comma
ⓘ About swiftbar-qmd | bash="open" param1="https://github.com/ggfevans/swiftbar-qmd" terminal=false

`;

snapshot[`snapshot: 10 — per-collection submenu (Rackula, hasObsidian: true) 1`] = `
| image=PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxNCAxNCIgd2lkdGg9IjE0IiBoZWlnaHQ9IjE0Ij48Y2lyY2xlIGN4PSI2LjIiIGN5PSI2LjIiIHI9IjQuMiIgZmlsbD0iY3VycmVudENvbG9yIi8+PGNpcmNsZSBjeD0iNi4yIiBjeT0iNi4yIiByPSIxLjYiIGZpbGw9IndoaXRlIi8+PGxpbmUgeDE9IjguNiIgeTE9IjguNiIgeDI9IjExLjIiIHkyPSIxMS4yIiBzdHJva2U9ImN1cnJlbnRDb2xvciIgc3Ryb2tlLXdpZHRoPSIxLjYiIHN0cm9rZS1saW5lY2FwPSJyb3VuZCIvPjwvc3ZnPg== templateImage=true color=#2fa84f tooltip="All clear"
---
Status | size=10 color=#8a8a8e shell=
● Daemon running                       6h 4m | color=#2fa84f size=12 shell= length=44 trim=false
● All collections healthy | color=#2fa84f shell=
    Last update               12 minutes ago | color=#8a8a8e shell= length=44 trim=false
---
Collections (4) | size=10 color=#8a8a8e shell=
● gVault                       2,057 · 18h ▸ | color=#2fa84f length=44 trim=false
  gVault | size=10 color=#8a8a8e shell=
  2,057 docs · qmd://gVault/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated            18 hours ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="gVault" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="gVault" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="gVault" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/notes/gVault" terminal=false
  📓 Open in Obsidian | bash="open" param1="obsidian://open?vault=gVault" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'gVault' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="gVault" terminal=false refresh=true
● jobinator9000                   129 · 1h ▸ | color=#2fa84f length=44 trim=false
  jobinator9000 | size=10 color=#8a8a8e shell=
  129 docs · qmd://jobinator9000/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated              1 hour ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="jobinator9000" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="jobinator9000" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="jobinator9000" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/projects/jobinator9000" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'jobinator9000' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="jobinator9000" terminal=false refresh=true
● obsidian-reference           1,596 · 52m ▸ | color=#2fa84f length=44 trim=false
  obsidian-reference | size=10 color=#8a8a8e shell=
  1,596 docs · qmd://obsidian-reference/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated          52 minutes ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/notes/obsidian-reference" terminal=false
  📓 Open in Obsidian | bash="open" param1="obsidian://open?vault=obsidian-reference" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'obsidian-reference' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="obsidian-reference" terminal=false refresh=true
● Rackula                        391 · 12m ▸ | color=#2fa84f length=44 trim=false
  Rackula | size=10 color=#8a8a8e shell=
  391 docs · qmd://Rackula/ | size=11 color=#8a8a8e shell=
  Pattern                      **/*.md | size=11 color=#8a8a8e shell=
  Last updated          12 minutes ago | size=11 color=#8a8a8e shell=
  ---
  ↻ Update this collection | bash="<PLUGIN_PATH>" param1="--action" param2="update-collection" param3="--collection" param4="Rackula" terminal=false refresh=true
  ⚡ Embed (new chunks only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-collection" param3="--collection" param4="Rackula" terminal=false refresh=true
  ⚡⚡ Force re-embed all | bash="<PLUGIN_PATH>" param1="--action" param2="force-reembed-collection" param3="--collection" param4="Rackula" terminal=false refresh=true
  ---
  📁 Reveal in Finder | bash="open" param1="/Users/g/notes/rackula" terminal=false
  📓 Open in Obsidian | bash="open" param1="obsidian://open?vault=Rackula" terminal=false
  ⧉ Copy collection name | bash="bash" param1="-c" param2="printf %s 'Rackula' | pbcopy" terminal=false
  ⓘ View context… | bash="<PLUGIN_PATH>" param1="--action" param2="show-context" param3="--collection" param4="Rackula" terminal=false refresh=true
---
Global actions | size=10 color=#8a8a8e shell=
↻ Update all collections | bash="<PLUGIN_PATH>" param1="--action" param2="update-all" terminal=false refresh=true shortcut=CmdOrCtrl+U
⚡ Embed all (new only) | bash="<PLUGIN_PATH>" param1="--action" param2="embed-all" terminal=false refresh=true shortcut=CmdOrCtrl+E
⟳ Restart MCP daemon | bash="<PLUGIN_PATH>" param1="--action" param2="restart-daemon" terminal=false refresh=true
■ Stop MCP daemon | bash="<PLUGIN_PATH>" param1="--action" param2="stop-daemon" terminal=false refresh=true
🧹 Cleanup orphaned data… | bash="<PLUGIN_PATH>" param1="--action" param2="cleanup" terminal=false refresh=true
---
⧉ Copy MCP endpoint URL | bash="bash" param1="-c" param2="echo -n 'http://localhost:8181' | pbcopy" terminal=false
›_ Show qmd status in Terminal | bash="qmd" param1="status" terminal=true
---
⚙ Preferences… | bash="open" param1="-t" param2=\$HOME/.config/swiftbar-qmd/config.yml terminal=false shortcut=CmdOrCtrl+Comma
ⓘ About swiftbar-qmd | bash="open" param1="https://github.com/ggfevans/swiftbar-qmd" terminal=false

`;
